# simulador_de_cache

./: CMakeLists.txt  Doxyfile  README.md  compile_commands.json  desc.md  down.md  req.md
docs/: annotated.html  app_8hpp_source.html  cache_8hpp_source.html  classApp-members.html  classApp.html  classes.html  config_8hpp_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_3.md5  inherit_graph_4.md5  inherit_graph_5.map  inherit_graph_5.md5  inherits.html  menudata.js  structBloco-members.html  structBloco.html  structBloco__inherit__graph.md5  structCache-members.html  structCache.html  structConfig-members.html  structConfig.html  structLinha-members.html  structLinha.html  structLinha__coll__graph.map  structLinha__coll__graph.md5  structMemoria-members.html  structMemoria.html  structRandom-members.html  structRandom.html
docs/html/: annotated.html  cache_8hpp_source.html  classApp-members.html  classApp.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_4.map  inherits.html  structBloco-members.html  structBloco.html  structBloco__inherit__graph.map  structCache.html  structLinha.html  structLinha__inherit__graph.md5  structMemoria-members.html  structRandom-members.html  (+1 more)
page/: README.md
src/: app.cpp  main.cpp
(+40 files in other folders)
